# jpycpay

./: .env.local  .gitignore  AGENT.md  Cargo.toml  README.md  dfx.json  plan.md
.dfx/ic/: canister_ids.json
.dfx/local/: canister_ids.json
.dfx/local/canisters/jpyc_wrapper/: constructor.did  index.js  service.did.d.ts  service.did.js
.dfx/local/canisters/relayer/: constructor.old.did  index.js  service.did  service.did.d.ts  service.did.js
.dfx/network/local/: ic-canister-http-config.json  ic-canister-http-socket-path  network-id  replica-effective-config.json
.dfx/network/local/state/replicated_state/: ic.json5  nns_public_key.pem  registry.proto
.dfx/network/local/state/replicated_state/node-100/: committee_signing_key  derived_node_id  idkg_mega_encryption_key  ni_dkg_dealing_encryption_key  node_signing_key  transport_tls_certificate
apps/frontend/: package-lock.json  package.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/frontend/src/app/api/gas-balance/: route.ts
apps/frontend/src/app/docs/: layout.tsx  page.tsx
apps/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  spinner.tsx  textarea.tsx
apps/frontend/src/lib/: env.ts  relayer-client.ts  relayer.idl.ts  viem.ts  wagmi.ts
apps/frontend/src/lib/abi/: erc20Meta.ts
canisters/jpyc_wrapper/: main.mo
canisters/relayer/: Cargo.toml  relayer.did
canisters/relayer/src/: lib.rs
docs/: EVM_RPC_canister.md  JPYC.md  JPYC_GASLESS.md  dfx.md
scripts/: derive_address.js  derive_address.ts
(+46 files in other folders)
