[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
candid = "0.10"
hex = "0.4"
ic-cdk = "0.12"
ic-cdk-macros = "0.8"
num-traits = "0.2"
num-bigint = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
once_cell = "1.19"
